<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.crosswordpuzzles.Crossui" >

    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>-->

	<item 
        android:id="@+id/clue_list" 
        android:orderInCategory="100"
        android:title="@string/clue_list" />
	
	<item
        android:id="@+id/reveal"
        android:orderInCategory="100"
        android:title="@string/reveal">
	    
	    <menu>
    		
    		<item 
        		android:id="@+id/reveal_letter" 
        		android:orderInCategory="100"
        		android:title="@string/reveal_letter" />
    
    		<item 
        		android:id="@+id/reveal_word" 
        		android:orderInCategory="100"
        		android:title="@string/reveal_word" /> 
        		
    		<item 
        		android:id="@+id/reveal_puz" 
        		android:orderInCategory="100"
        		android:title="@string/reveal_puz" /> 
    	</menu>
   	</item>
   	
	<item
        android:id="@+id/check_list"
        android:orderInCategory="100"
        android:title="@string/check_list">
	    
	    <menu>
			
			<item 
        		android:id="@+id/check_letter" 
        		android:orderInCategory="100"
        		android:title="@string/check_letter" />
    
    		<item 
        		android:id="@+id/check_word" 
        		android:orderInCategory="100"
        		android:title="@string/check_word" /> 
        		
    		<item 
        		android:id="@+id/check_puz" 
        		android:orderInCategory="100"
        		android:title="@string/check_puz" /> 
	    </menu>
	
	</item>
	
	<item 
        android:id="@+id/show_hint" 
        android:orderInCategory="100"
        android:title="@string/show_hint" />
	
	<item 
        android:id="@+id/clr_puz" 
        android:orderInCategory="100"
        android:title="@string/clear_puz" />
	
	<item 
        android:id="@+id/save" 
        android:orderInCategory="100"
        android:title="@string/save" />
	
	<item
        android:id="@+id/quit"
        android:orderInCategory="100"
        android:title="@string/quit" />
	
	<item
        android:id="@+id/quit_mainmenu"
        android:orderInCategory="100"
        android:title="@string/quit_main" />
</menu>
