<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crosswordpuzzles.CluelistActivityMainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/clue_across"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_type1"
        android:background="@color/transRed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/clue_1a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_1a"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/clue_2a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_2a"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/clue_5a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_5a"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/clue_6a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_6a"
        android:layout_marginTop="12dp" />
    
    
    
    <TextView
        android:id="@+id/clue_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_type2"
        android:background="@color/transRed"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/clue_1d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_1d"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/clue_2d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_2d"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/clue_3d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_3d"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/clue_4d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clue_4d"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btn_back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/back" />

</LinearLayout>
